# avto_prihodko_1

./: DELIVERY_SUMMARY.md  INSTALLATION_GUIDE.md  QUICKSTART.md  QUICKSTART_EXCEL.md  README.md  README_RELEASE.txt  RELEASE_NOTES.md  build_release.bat  compendium.md  create_excel_template.py  create_instructions_sheet.py  data structuring.md  install.bat  pyproject.toml  requirements.txt  run.bat  system_status.json  terminal_template.xlsx  terminal_template_optimized.xlsx  terminal_template_optimized_v2.xlsx  test_config.py  test_output_opt.xlsx  test_output_palm.xlsx  test_output_sun.xlsx
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_EVOLUTION.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_STATUS.md  EXCEL_TEMPLATE_GUIDE.md  IMPLEMENTATION_TRACKER.md  METHODOLOGY.md  PHASE10_SUMMARY.md  PHASE11_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASE9_SUMMARY.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  TODOLIST2_COMPLETION_REPORT.md  USER_MANUAL.md
terminal_optimizer/: __init__.py  balance_calculator.py  config.py  config.yaml  constants.py  critical_point.py  domain_models.py  error_messages.yaml  excel_io.py  exceptions.py  logger.py  main.py  monte_carlo.py  risk_analysis.py  sequence_generator.py  sequence_optimizer.py  utils.py  validation.py  visualization.py  wagon_manager.py
vba/: MainInterface.bas  ProgressForm.frm  README.md
